# flowjoprizm

./: .gitignore  README.md  pyproject.toml  sample.ipynb
data/2025-4-8 AVNM and ketone Mac panel - ETHAN/sampletype/: SAT.csv  VAT.csv
data/2025-4-8 AVNM and ketone Mac panel - ETHAN/treatment/: AVNM.csv  AVNM_bd.csv  Control.csv  bd.csv
flowjoprizm/: plot.py  process.py
flowjoprizm/python/: flow_analysis.py  sample.ipynb
